<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" 
        android:textSize="18sp"/>
        
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_apn_tip" 
        android:textSize="18sp"/>

    <Button
        android:id="@+id/get_apn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onGetAPN"
        android:text="@string/get_apn" />
    
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_apn_tip" 
        android:textSize="18sp"/>
    
    <Button
        android:id="@+id/set_apn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSetAPN"
        android:text="@string/set_apn" />
     
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/status_tip"
        android:textSize="18sp" />
    
    <Button
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onGetStatus"
        android:text="@string/device_status_activity_title" />
    
</LinearLayout>